Bug 269727 - buttons disappear when changing toolbar
Summary: buttons disappear when changing toolbar
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-29 21:53 UTC by Silver Salonen
Modified: 2011-03-30 19:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2011-03-29 21:53:50 UTC
Version:           unspecified (using KDE 4.6.1) 
OS:                Linux

After upgrading to 4.1 I had to reset my toolbar to default, because otherwise there were no Torrents, Plugins and Search buttons. Now when I change something on toolbar (add or remove buttons etc), these 3 buttons disappear every time.

Reproducible: Always
Comment 1 Joris Guisson 2011-03-30 19:50:14 UTC
Git commit b6f8585cdb61fb79b25de26f4194da66fdd3e0d3 by Joris.
Committed on 30/03/2011 at 19:53.
Pushed by guisson into branch 'master'.

Make sure activities list is added again to the GUI after toolbars are edited

BUG: 269727

M  +1    -0    ChangeLog     
M  +8    -8    ktorrent/gui.cpp     
M  +1    -1    ktorrent/gui.h     

http://commits.kde.org/ktorrent/b6f8585cdb61fb79b25de26f4194da66fdd3e0d3
Comment 2 Joris Guisson 2011-03-30 19:51:19 UTC
Git commit 091ab8576d0194e53517e04b7d7ce4bc71a830b3 by Joris.
Committed on 30/03/2011 at 19:53.
Pushed by guisson into branch '4.1'.

Backport to 4.1: Make sure activities list is added again to the GUI after toolbars are edited

CCBUG: 269727

M  +1    -0    ChangeLog     
M  +8    -8    ktorrent/gui.cpp     
M  +1    -1    ktorrent/gui.h     

http://commits.kde.org/ktorrent/091ab8576d0194e53517e04b7d7ce4bc71a830b3