Make sure activities list is added again to the GUI after toolbars are edited

BUG: 269727